--- a/app/views/users/onboarding.html.erb
+++ b/app/views/users/onboarding.html.erb
@@ -1,7 +1,7 @@
 <%= image_tag "banner_onboarding.jpg", id: "banner_writing" %>
 <div class="skinny_wrapper onboarding">
   <h1><%= current_user.first_name %>, Welcome to The Teen Magazine Writer Team!</h1>
-  <p>Please complete the onboarding process.</p>
+  <p>Please complete the onboarding process to unlock your writer dashboard.</p>
       <%= render "users/onboarding/#{@partial}" %>
 </div>
 
