--- a/app/views/users/onboarding/next_steps_partials/_selected_pitch.html.erb
+++ b/app/views/users/onboarding/next_steps_partials/_selected_pitch.html.erb
@@ -12,4 +12,4 @@
 </div>
 <h3>Great job! You've claimed this pitch.</h3>
 <p>You've claimed the pitch <i><%= @pitch.title %></i> and a draft has been started on your dashboard. Your dashboard is where you'll be able to interact with the writer community, read helpful resources, work on your articles, claim pitches, and submit for review.</p>
-<p>Please complete the remaining steps explained on your dashboard to become an active member of our writer team. Click <i>Go to Profile</i> to be taken there now!</p>
+<p>Please complete the remaining steps explained on your dashboard to become an active member of our writer team. Click <i>Go to Profile</i> to be taken there now.</p>
