--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -20,6 +20,15 @@
   max-width: 285px !important;
 }
 
+blockquote {
+  margin-top: 20px;
+  p {
+    font-size: 0.9em;
+  }
+  border-left: 5px solid #cccccc;
+  padding-left: 10px;
+}
+
 .popover-text {
   font-size: 1em;
 }
