--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -68,7 +68,15 @@
                          <div class="dropdown">
                            <% @profile_img = current_user.profile.exists? ? image_tag(current_user.profile.url(:square)) : image_tag("profile_image.jpg") %>
                             <a class="mr-0 btn-floating btn-sm btn-block pt-0 dropdown-toggle btn-profile" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-dropdown-animation="off">
-                              <span id="dropdown-btn-content-wrapper" style="display: block; height: 100%;" <% if @show_onboarding %>data-step data-index="1" data-onboarding-content="Click here to change your password, navigate to editor pitches, the community peer feedback page, and more." <% end %> >
+                              <span
+                                id="dropdown-btn-content-wrapper"
+                                style="display: block; height: 100%;"
+                                <% if @show_onboarding %>
+                                  data-step data-index="1" data-onboarding-content="Click here to change your password, navigate to editor pitches, the community peer feedback page, and more."
+                                <% elsif @show_editor_onboarding %>
+                                  data-step data-index="3" data-onboarding-content="New options have been added. Navigate to your editor dashboard here."
+                                <% end %>
+                              >
                                 <i class="fa fa-bars" ></i>
                                 <%= @profile_img %>
                                 <% if !(@notifications.eql? 0) %>
