--- a/app/views/pages/start.html.erb
+++ b/app/views/pages/start.html.erb
@@ -1,19 +1,8 @@
 <div id="banner_writing" class="editor G6"></div>
 <div class="apply_wrapper wrapper_padding pitch_form_wrapper writing">
   <h3>Editor Onboarding & Monthly Assignments</h3>
-  <p>Welcome to The Teen Magazine Editor Team! Our editors play an integral role in taking an idea to a published article on The Teen Magazine,
-  and we are so happy that you applied to join this team of talented student writers.</p>
-  <p>The Teen Magazine would not run without our editor team,
-  and we truly want to thank you for all the time and devotion we've seen you put into being a writer, and now editor, for TTM.</p>
-  <h4>As an Editor for The Teen Magazine:</h4>
-  <ul>
-    <li>You will be expected to remain an active member of our writer community and complete 10 new pitches and review at least 8 submitted articles every month. Reviews encompass any time that you move an article to "In Review" and either
-    reject it with requested changes or approve it for publishing (more info in <a target="_blank" href="/article-requirements"><b>Reviewing Articles</b></a>).
-    <li>You will receive your own <a target="_blank" href="/editors/<%= current_user.slug %>"><b>Editor Dashboard</b></a> along with your updated <a target="_blank" href="<%= user_path(id: current_user.slug, page: 'public') %>"><b>Editor Profile</b></a> which will keep track of how many writers you've directly helped at The Teen Magazine.
-    <li>You will be able to view all writers and accept submitted profiles.</li>
-  </ul>
 
-  <p>Please make sure you've read through all the onboarding materials (also found on your editor dashboard) before reviewing any articles or submitted pitches.</p>
+  <%= render "pages/editor_partials/start_content" %>
 
   <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
     <circle cx="26" cy="26" r="25" fill="none"/>
