--- a/app/views/users/onboarding/_welcome.html.erb
+++ b/app/views/users/onboarding/_welcome.html.erb
@@ -9,17 +9,16 @@
 </div>
 <div class="onboarding_page_container">
   <div id="onboarding_page">
-    <h3>We grow as writers, as journalists, as leaders, together</h3>
     <p>Congratulations on being accepted as a writer for The Teen Magazine! Our community of talented and young writers
       inspire and support each other into becoming part of the next generation of
-       journalists and influencers of change.</p>
+       journalists and influencers of culture and change.</p>
     <%= image_tag "we-are-the-writers.jpg", :class => "welcome_hero" %>
-    <p style="margin-top: 8px; font-family: 'Playfair Display'"><i>❝ Throughout human history, our greatest leaders and thinkers have used
-      the power of words to transform our emotions, to enlist us in their causes, and to
-      shape the course of destiny. Words can not only create emotions, they create actions.
-      And from our actions flow the results of our lives. ❞
-      <span>- Tony Robbins</span></i>
-    </p>
+    <blockquote>
+      <p style="margin-top: 8px;"><i class="fas fa-quote-left"></i> <i>You can’t connect the dots looking forward; you can only connect them looking backward. So you have to trust that the dots will somehow connect in your future. You have to trust in something; your gut, destiny, life, karma, whatever. This approach has never let me down, and it has made all the difference in my life. </i><i class="fas fa-quote-right"></i>
+        <span>- Steve Jobs</span>
+      </p>
+      <p>We hope this writing journey can be one such dot for you.</p>
+    </blockquote>
     <h5>What to Expect: </h5>
       <p>The Teen Magazine's writer community will give you the guidance and experience necessary to launch your career in the
         journalism and blogging world. As a writer for The Teen Magazine, you will get the opportunity to:
