updated writer onboarding

--- a/app/views/users/onboarding/_welcome.html.erb
+++ b/app/views/users/onboarding/_welcome.html.erb
@@ -14,10 +14,9 @@
        journalists and influencers of culture and change.</p>
     <%= image_tag "we-are-the-writers.jpg", :class => "welcome_hero" %>
     <blockquote>
-      <p style="margin-top: 8px;"><i class="fas fa-quote-left"></i> <i>You can’t connect the dots looking forward; you can only connect them looking backward. So you have to trust that the dots will somehow connect in your future. You have to trust in something; your gut, destiny, life, karma, whatever. This approach has never let me down, and it has made all the difference in my life. </i><i class="fas fa-quote-right"></i>
-        <span>- Steve Jobs</span>
+      <p style="margin-top: 8px;"><i class="fas fa-quote-left"></i> <i>It's about a girl who is on the cusp of becoming someone.. A girl who may not know what she wants right now, and she may not know who she is right now, but who deserves the chance to find out. </i><i class="fas fa-quote-right"></i>
+        <span>- Jodi Picoult, My Sister's Keeper</span>
       </p>
-      <p>We hope this writing journey can be one such dot for you.</p>
     </blockquote>
     <h5>What to Expect: </h5>
       <p>The Teen Magazine's writer community will give you the guidance and experience necessary to launch your career in the
