--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -32,6 +32,7 @@
     >
     <div id="site-wrapper">
       <%= render "layouts/partials/slide-in-menu" %>
+      <%= render "layouts/partials/header-writer-mobile" %>
       <div id="site-canvas">
           <!-- <div class="banner_stts_relative">
   <<<<<<< HEAD
@@ -41,7 +42,7 @@
   >>>>>>> b3412bcbdaef7bed91dd0ae024fd9e21814e28a0
           </div> -->
           <div class="bodywrapper">
-              <header id="main_navigation" class="clearfix">
+              <header id="main_navigation" class="clearfix header-navigation">
                 <div id="banner">
                   <i class="fa fa-bars toggle-nav" onclick="toggleNav();"></i>
                   <a id="name_wrapper" href="/"><div id="name"></div></a>
