--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -332,6 +332,10 @@ html, body {
   }
 }
 
+.header-mobile-show {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.1);
+}
+
 #site-menu {
   width: 320px;
   position: absolute;
