--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -247,9 +247,11 @@ $gray:  #2a2a2a;
 }
 
 @media (max-width: 1270px) {
+  #disqus_thread {
+    margin: 0 20px;
+  }
    .skinny {
-     margin-left: 20px !important;
-     margin-right: 20px !important;
+     margin: 0px;
      #post_title_show {
        h1 {
          font-size: 45px;
@@ -257,6 +259,7 @@ $gray:  #2a2a2a;
      }
      .content_wrapper {
        max-width: 100%;
+       margin: 0 0 0 20px;
      }
    }
 }
