--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -1164,7 +1164,7 @@ p, ul, ol {
         margin-top: 20px;
       }
       h3, .contain_articles {
-        padding: 0 60px !important;
+        padding: 0 60px;
       }
     }
     .post_apply, .share_article_feedback {
