--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -1137,6 +1137,16 @@ p, ul, ol {
   margin: 0.8em 0;
 }
 
+@media (min-width: 1030px) {
+  .post_apply {
+    overflow: auto;
+    align-self: flex-start;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 56px;
+  }
+}
+
 @media (max-width: 1030px) {
   .flex_wrapper_columns {
     flex-direction: column !important;
