--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -1138,12 +1138,15 @@ p, ul, ol {
 }
 
 @media (min-width: 1030px) {
-  .post_apply {
-    overflow: auto;
+  .fixed_ads {
     align-self: flex-start;
     position: sticky;
     position: -webkit-sticky;
-    top: 56px;
+    top: 66px;
+    max-width: 300px;
+    min-width: 300px;
+    padding: 15px 20px 15px 0px;
+    margin-left: 20px;
   }
 }
 
@@ -1162,6 +1165,7 @@ p, ul, ol {
     }
     .post_apply {
       padding: 0px !important;
+      margin-bottom: 20px !important;
       .ads_wrapper {
         background-color: transparent;
         iframe {
