--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -1144,8 +1144,8 @@ p, ul, ol {
     top: 66px;
     max-width: 300px;
     min-width: 300px;
-    padding: 15px 20px 15px 0px;
-    margin-left: 20px;
+    padding: 15px 0px;
+    margin: 0 20px;
   }
 }
 
@@ -1182,9 +1182,11 @@ p, ul, ol {
     }
     .post_apply, .share_article_feedback {
       margin: 0;
-      padding: 0 40px;
+      padding: 0 60px;
       min-width: 100% !important;
-      max-width: 100% !important;
+      .newpost--new--profile {
+        margin: 0;
+      }
     }
   }
 }
