--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -251,7 +251,7 @@ $gray:  #2a2a2a;
     margin: 0 20px;
   }
    .skinny {
-     margin: 0px;
+     margin: 0px !important;
      #post_title_show {
        h1 {
          font-size: 45px;
