updated ads wrapper background color

--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -245,8 +245,12 @@
   padding: 30px;
 }
 
-.ads_wrapper, .share_article_feedback {
+.share_article_feedback {
   background-color: white;
+}
+
+.ads_wrapper {
+  background-color: #F7F7F8;
 }
 
 .post_apply, .share_article_feedback {
