--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -16,6 +16,11 @@
    }
 }
 
+.fa-angle-right, .fa-angle-left {
+  font-size: 40px !important;
+  margin-left: 10px !important;
+}
+
 .popover {
   max-width: 285px !important;
 }
