--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="https://fonts.googleapis.com/css?family=Vollkorn:700" rel="stylesheet">
     <script type="text/javascript" src="https://svc.webspellchecker.net/spellcheck31/wscbundle/wscbundle.js"></script>
-    <script src="https://use.fontawesome.com/9fbc74da52.js"></script>
     <script src="https://kit.fontawesome.com/f816369528.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,500" rel="stylesheet">
     <%= display_meta_tags %>
@@ -133,7 +132,7 @@
                               <%= link_to "Change Password", edit_user_registration_path, class: "dropdown-item" %>
                               <div class="dropdown-divider"></div>
                               <% if !current_user.partner? %>
-                                <a class="dropdown-item" target="_blank" href="https://www.facebook.com/groups/615063885673363">Writer Facebook Group <i class="fa fa-external-link"></i></a>
+                                <a class="dropdown-item" target="_blank" href="https://www.facebook.com/groups/615063885673363">Writer Facebook Group <i class="fas fa-external-link-alt"></i></a>
                               <% end %>
                               <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
                             </div>
