--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -1152,6 +1152,7 @@ p, ul, ol {
     min-width: 300px;
     padding: 15px 0px;
     margin: 0 20px;
+    background-color: white !important;
   }
 }
 
