removed font family script

--- a/app/assets/stylesheets/_category.css.scss
+++ b/app/assets/stylesheets/_category.css.scss
@@ -14,8 +14,9 @@
       padding: 20px;
       margin: 0;
       color: #4ABEB6;
-      font-family: 'Vollkorn', serif;
+      font-family: 'Playfair Display', serif;
       font-size: 40px;
+      font-weight: bold;
     }
   }
 
