--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -604,7 +604,8 @@ hr {
   margin-left: auto;
   margin-right: auto;
   font-size: 2em;
-  font-family: 'Vollkorn', serif;
+  font-family: 'Playfair Display', serif;
+  font-weight: bold;
   a {
     color: black;
     text-decoration: none;
