--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -141,7 +141,8 @@
     background-size: cover;
     background-position: center;
     color: white;
-    font-family: 'Vollkorn', serif;
+    font-family: 'Playfair Display', serif;
+    font-weight: bold;
     display: flex;
     justify-content:center;
     flex-direction: column;
@@ -277,7 +278,8 @@
       font-size: 30px;
       text-decoration: none;
       color: #4ABEB6;
-      font-family: 'Vollkorn', serif;
+      font-family: 'Playfair Display', serif;
+      font-weight: bold;
     }
 
     p {
